feat: add artists support
